# linalg

./: CMakeLists.txt  README.md  factory.hpp  main.cpp  matrix.hpp  util.hpp  vector.hpp
demo/: CMakeLists.txt  main.cpp
include/linalg/: factory.hpp  matrix.hpp  matrix_view.hpp  util.hpp  vector.hpp
